# credinform_cli

./: .bumpversion.toml  .env_example  .gitignore  Cargo.toml  README.md
.github/workflows/: build linux.yml  build windows.yml  release.yml
src/: cli.rs  config.rs  credinform.rs  main.rs
src/credinform/: api.rs  models.rs
src/credinform/models/: access_token.rs  address.rs  credinform_data.rs  credinform_file.rs  search_company.rs  tax_number.rs
