[package]
name = "credinform_cli"
version = "0.5.0"
edition = "2021"
authors = ["Viktor Merkurev <mr.fennr@ya.ru>"]
description = "Credinform cli API client"
repository = "https://github.com/fennr/credinform-cli"
keywords = ["credinform", "cli", "api"]
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
cargo-edit = "0.12.3"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
