[package]
name = "credinform_cli"
version = "0.6.0"
edition = "2021"
authors = ["Viktor Merkurev <mr.fennr@ya.ru>"]
description = "Credinform cli API client"
repository = "https://github.com/fennr/credinform-cli"
keywords = ["credinform", "cli", "api"]
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
cargo-edit = "0.12.3"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"

# debug build for target executable
[profile.dev]
opt-level = 1 # basic optimization to inline iterators and getters
strip = "debuginfo" # strip debug nonsense since debuggers are overrated, remove this to actually do debugging

# debug builds for deps 
[profile.dev.package."*"]
opt-level = 3 # enable full optimization within dependencies - I do not expect to debug my deps
strip = "debuginfo" # strip debug symbols as they are useless with O3 anyway

# debug builds for procmacros
[profile.dev.build-override]
opt-level = 2 # reasonable optimization
codegen-units = 256 # max threading
#debug = false # when possible - this is generally scary as some procmacros will fail without any feedback

# release build for procmacros - same config as debug build for procmacros
[profile.release.build-override]
opt-level = 2
codegen-units = 256
debug = false # when possible
